--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
    &copy;{{ site.time | date: '%Y' }} {{ site.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a>, theme by <a href="https://github.com/scotte/jekyll-clean">Scott Emmons</a>
             under
             <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution.</a> 
-           除非声明,文章皆为原创，转载需注明出处.
+           若非声明皆为原创,转载需注明出处.
      </p>
         </div>
     </div>
