--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">链接</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">归档</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/about.html">关于</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
+                    <!--li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li-->
                     {% if site.github != '' %}
                     <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                     {% endif %}
