--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,8 @@
         <div class="col-md-9">
           <div class="article">
             <div class="well">
-                <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.date | date: "%Y.%m.%d" }} -  {{ page.title }}</a></h1>
+                <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.title }}</a></h1>
+                <div class="date">{{ page.date | date: "%Y.%m.%d" }}</div>
             {% if site.comments == true and page.comments == true and site.disqus != '' %}
                 <p class="author"><a href="#disqus_thread">Comments</a></p>
             {% endif %}
