--- a/css/theme.css
+++ b/css/theme.css
@@ -41,29 +41,34 @@ body {
     text-align: justify;
     text-justify: inter-ideograph;
     -ms-text-justify: inter-ideograph;
-    font-family: 宋体,serif;
+    font-family: 宋体, serif;
     font-size: 1.1em;
 }
 
+h1,h2{
+    text-align: center;
+}
 .article p {
-    text-indent:  2em;
+    text-indent: 2em;
 
 }
-
-.article h2 {
-    font-weight:bold
-    font-size: 1.3em;
-
+.article .date{
+    text-align: center;
 }
-
-.article h3 {
-        font-weight:bold
+.article h2, .h2 {
     font-size: 1.2em;
+    font-weight: bold;
 }
 
-.article h4 {
-    font-weight:bold
+.article h3, .h3 {
     font-size: 1.1em;
+    font-weight: bold;
+
+}
+
+.article h4, .h4 {
+    font-size: 1.0em;
+    font-weight: bold;
 }
 
 .well h1 {
@@ -80,12 +85,13 @@ body {
 }
 
 code.has-jax {
-            font: inherit;
-            font-size: 100%;
-            background: inherit;
-            border: inherit;
+    font: inherit;
+    font-size: 100%;
+    background: inherit;
+    border: inherit;
 }
-.contact{
+
+.contact {
     width: 30em;
     height: 6em;
     background-image: url(/media/about.png);
