--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -18,7 +18,7 @@
     <script type='text/javascript'>
         MathJax.Hub.Config({
             tex2jax: {
-                skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+                skipTags: ['script', 'noscript', 'style', 'textarea' ]
             }
         });
         MathJax.Hub.Queue(function () {
