--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,10 @@
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="{{ site.baseurl }}/highlight/styles/default.css">
+    <script src="{{ site.baseurl }}/highlight/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
     {% include mathjax.html %}
 
 </head>
